# Fundable-Soroban-Contracts

./: .gitignore  Cargo.toml  Makefile  README.md  SKILL.md  deployed_contracts.json  replace.py
contracts/flow/: Cargo.toml
contracts/lockup/: Cargo.toml
contracts/paymaster/: Cargo.toml
contracts/paymaster/src/: lib.rs  test.rs
contracts/paymaster/test_snapshots/test/: test_add_duplicate_fee_token_is_noop.1.json  test_add_fee_token.1.json  test_collect_fee_and_invoke_basic.1.json  test_collect_fee_and_invoke_with_args.1.json  test_collect_fee_disallowed_token.1.json  test_collect_fee_insufficient_balance.1.json  test_collect_fee_zero_amount.1.json  test_fee_token_is_allowed.1.json  test_fee_token_removed_then_rejected.1.json  test_forward_collects_bounded_fee_and_invokes_target.1.json  test_forward_rejects_disallowed_fee_token.1.json  test_forward_rejects_expired_approval.1.json  test_get_fee_tokens.1.json  test_initialize.1.json  test_multiple_fee_tokens.1.json  test_remove_fee_token.1.json
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  test.rs
contracts/router/test_snapshots/test/: test_end_to_end_flow_stream.1.json  test_end_to_end_lockup_stream.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  test_upgrade.1.json  test_upgrade_nft.1.json  test_withdraw_after_nft_transfer.1.json  test_withdraw_fails_if_not_nft_owner.1.json
scripts/: add_trustline.sh  create_lockup.sh  deploy_paymaster.sh  deploy_testnet.sh
ts-scripts/: demo_paymaster.ts  generate_auth.ts  package.json  pnpm-lock.yaml  relayer_payload.json  test_auth.ts
(+67 files in other folders)
