[workspace]
resolver = "2"
members = [
  "contracts/*",
  "packages/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fundable/fundable-soroban-contracts"
publish = false

[workspace.dependencies]
soroban-sdk = "25.3.1"
stellar-fee-abstraction = "=0.7.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
