[package]
name = "paymaster"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-fee-abstraction = { workspace = true }
shared = { path = "../../packages/shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
