[package]
name = "router"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../../packages/shared" }
flow = { path = "../flow" }
lockup = { path = "../lockup" }
stream-nft = { path = "../stream-nft" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
